// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyApplications component should be rendered correctly if apps uninstalled 1`] = `
<div
  className="sto-myapps"
>
  <div>
    <h2
      className="sto-myapps-title"
    >
      My Applications
    </h2>
    <div
      className="sto-myapps-list"
    >
      <SmallAppItem
        developer={
          Object {
            "name": "Cozy",
          }
        }
        editor="cozy"
        icon="<svg></svg>"
        installed={true}
        name="Collect"
        onClick={[Function]}
        slug="collect"
        version="3.0.0"
      />
      <SmallAppItem
        developer={
          Object {
            "name": "Cozy",
          }
        }
        editor="cozy"
        icon="<svg></svg>"
        installed={true}
        name="Drive"
        onClick={[Function]}
        slug="drive"
        version="3.0.0-beta89bnhj3993"
      />
    </div>
  </div>
  <withRouter(ApplicationRouting)
    installApp={undefined}
    installedApps={
      Array [
        Object {
          "description": Object {
            "en": "The konnectors manager for Cozy V3",
          },
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "cozy",
          "icon": "<svg></svg>",
          "installed": true,
          "isInRegistry": true,
          "name": Object {
            "en": "Collect",
          },
          "related": "http://collect.cozy.mock/",
          "slug": "collect",
          "uninstallable": false,
          "version": "3.0.0",
          "versions": Object {
            "beta": Array [
              "3.0.0",
            ],
            "dev": Array [
              "3.0.0",
            ],
            "stable": Array [
              "3.0.0",
            ],
          },
        },
        Object {
          "description": Object {
            "en": "The files manager for Cozy V3",
          },
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "cozy",
          "icon": "<svg></svg>",
          "installed": true,
          "name": Object {
            "en": "Drive",
          },
          "related": "http://drive.cozy.mock/",
          "slug": "drive",
          "uninstallable": false,
          "version": "3.0.0-beta89bnhj3993",
        },
      ]
    }
    isFetching={false}
    parent="myapps"
    uninstallApp={[Function]}
  />
</div>
`;

exports[`MyApplications component should display error from props correctly 1`] = `
<div
  className="sto-myapps"
>
  <div>
    <h2
      className="sto-myapps-title"
    >
      My Applications
    </h2>
    <div
      className="sto-myapps-list"
    >
      <p
        className="coz-error"
      >
        This is a test error
      </p>
    </div>
  </div>
  <withRouter(ApplicationRouting)
    installApp={undefined}
    installedApps={Array []}
    isFetching={false}
    parent="myapps"
    uninstallApp={[Function]}
  />
</div>
`;

exports[`MyApplications component should render correctly a spinner if apps is fetching 1`] = `
<div
  className="sto-myapps"
>
  <div>
    <h2
      className="sto-myapps-title"
    >
      My Applications
    </h2>
    <div
      className="sto-myapps-list"
    />
  </div>
  <withRouter(ApplicationRouting)
    installApp={undefined}
    installedApps={Array []}
    isFetching={true}
    parent="myapps"
    uninstallApp={[Function]}
  />
  <_translate
    loadingType="appsFetching"
    middle="true"
    size="xxlarge"
  />
</div>
`;

exports[`MyApplications component should render only routing if path not exactly match /myapps 1`] = `
<div
  className="sto-myapps"
>
  <withRouter(ApplicationRouting)
    installApp={undefined}
    installedApps={
      Array [
        Object {
          "description": Object {
            "en": "The konnectors manager for Cozy V3",
          },
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "cozy",
          "icon": "<svg></svg>",
          "installed": true,
          "isInRegistry": true,
          "name": Object {
            "en": "Collect",
          },
          "related": "http://collect.cozy.mock/",
          "slug": "collect",
          "uninstallable": false,
          "version": "3.0.0",
          "versions": Object {
            "beta": Array [
              "3.0.0",
            ],
            "dev": Array [
              "3.0.0",
            ],
            "stable": Array [
              "3.0.0",
            ],
          },
        },
        Object {
          "description": Object {
            "en": "The files manager for Cozy V3",
          },
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "cozy",
          "icon": "<svg></svg>",
          "installed": true,
          "name": Object {
            "en": "Drive",
          },
          "related": "http://drive.cozy.mock/",
          "slug": "drive",
          "uninstallable": false,
          "version": "3.0.0-beta89bnhj3993",
        },
      ]
    }
    isFetching={false}
    parent="myapps"
    uninstallApp={[Function]}
  />
</div>
`;
